--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-slate
 title: Det Digitale Folkebibliotek - Manual for Folkebibliotekernes CMS
 description: Manualen har til formål at hjælpe med administration, opsætning og redaktionelle opgaver for Folkebibliotekernes CMS.
