--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Folkebibliotekernes CMS
+subtitle: "Version alfa1"
+logo: "/assets/images/layout/ddf-logo-small.png"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
