Add default toc to pages

--- a/_config.yml
+++ b/_config.yml
@@ -73,4 +73,6 @@ defaults:
       type: pages
     values:
       layout: single
+      toc: true
+      toc_label: "Indhold på siden"
       author_profile: false
