--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,13 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
+
+sidebar:
+  - title: "Posts"
+    url: /posts/
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
+  - title: "About"
+    url: /about/
