--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 minimal_mistakes_skin: default
 search: true
+search_provider: algolia
+algolia:
+  application_id: 0DVITCE5YK
+  index_name: prod_folkebibliotekernes_cms_manual
+  search_only_api_key: d0da63a81606f093f2e7e4fc4cbef2b1
+  powered_by: true
 
 # Build settings
 markdown: kramdown
