--- a/_config.yml
+++ b/_config.yml
@@ -85,3 +85,15 @@ defaults:
         title: "Vejledninger"
         nav: sidebar
       author_profile: false
+   # _pages/redaktoer
+  - scope:
+      path: "_pages/redaktoer"
+      type: pages
+    values:
+      layout: single
+      toc: true
+      toc_label: "Indhold på siden"
+      sidebar:
+        title: "Redaktørmanual"
+        nav: redaktoer
+      author_profile: false
