--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,33 +1,55 @@
 main:
   - title: "Redaktør"
-    url: /editor/
-  - title: "Lokal administrator"
-    url: /local-admin/
+    url: /redaktoer/
+  - title: "Administrator"
+    url: /administrator/
   - title: "Udvikler"
     url: /udvikler/
 
-sidebar:
+redaktoer:
+  - title: "Opret indhold"
+    children:
+      - title: "Bibliotek"
+        url: /redaktoer/bibliotek/
+      - title: "Åbningstider"
+        url: /redaktoer/aabeningstider/
+      - title: "Gruppe (Temasider)"
+        url: /readktoer/grupper/
+      - title: "Sektion"
+        url: /redaktoer/sektion/
+      - title: "Begivenhed (arrangement)"
+        url: /redaktoer/arrangement/
+      - title: "Place2Book"
+        url: /redaktoer/place2book/
+      - title: "Nyhed"
+        url: /redaktoer/nyhed/
+
+   - title: "Hjemmesidens struktur"
+    children:
+      - title: "Hovedmenuen"
+        url: /redaktoer/hovedmenu/
+      - title: "Secondary menu"
+        url: /redaktoer/secondary-menu/
+      - title: "Footermenu"
+        url: /redaktoer/footer-menu/
+
+administrator:
+  - title: "Farver og logo"
+    url: /administrator/farver-logo/
+  - title: "Overlay"
+    url: /administrator/overlay/
+  - title: "Opret grupper (Temasider)"
+    url: /administrator/personalisering/
+  - title: "Placering af indhold på forside/sektion"
+    url: /administrator/sektion/
+  - title: "Kontaktinformation"
+    url: /administrator/kontakt/
+
+
+udvikler:
   - title: "Redaktør"
     url: /editor/
   - title: "Lokal administrator"
     url: /local-admin/
   - title: "Udvikler"
     url: /udvikler/
-
-redaktoer:
-  - title: "Sådan opretter du indhold i DDB CMS"
-    children:
-      - title: "Opret et Bibliotek"
-        url: /redaktoer/bibliotek/
-      - title: "Åbningstider"
-        url: /redaktoer/aabeningstider/
-      - title: "Opret grupper (Temasider)"
-        url: /readktoer/grupper/
-      - title: "Opret en sektion"
-        url: /redaktoer/sektion/
-      - title: "Opret en Begivenhed (arrangement)"
-        url: /redaktoer/arrangement/
-      - title: "Place2Book: Send en begivenhed (arrangement) til Place2Book"
-        url: /redaktoer/place2book/
-      - title: "Opret en nyhed"
-        url: /redaktoer/nyhed/
