--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,19 @@
 main:
-  - title: "Redaktør"
-    url: /redaktoer/
-  - title: "Administrator"
-    url: /administrator/
-  - title: "Udvikler"
-    url: /udvikler/
+  - title: "Posts"
+    url: /posts/
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
+  - title: "About"
+    url: /about/
 
-sitebar:
-  - title: "Redaktør"
-    url: /redaktoer/
-  - title: "Administrator"
-    url: /administrator/
-  - title: "Udvikler"
-    url: /udvikler/
-
+sidebar:
+  - title: "Funktionalitet"
+    url: /posts/
+  - title: "Indhold"
+    url: /categories/
+  - title: "Administration"
+    url: /tags/
+  - title: "Konfiguration"
+    url: /about/
