--- a/_config.yml
+++ b/_config.yml
@@ -85,3 +85,15 @@ defaults:
         title: "Vejledninger"
         nav: sidebar
       author_profile: false
+    # _pages
+  - scope:
+      path: "_pages/redaktoer"
+      type: pages
+    values:
+      layout: single
+      toc: true
+      toc_label: "Indhold på siden"
+      sidebar:
+        title: "Redaktoer manual"
+        nav: sidebar
+      author_profile: false
