--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,10 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+  - title: "Redaktør"
+    url: /redaktoer/
+  - title: "Administrator"
+    url: /administrator/
+  - title: "Udvikler"
+    url: /udvikler/
 
 sidebar:
   - title: "Funktionalitet"
