--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,24 @@ main:
   - title: "Udvikler"
     url: /udvikler/
 
+redaktoer:
+  - title: "Opret indhold"
+    children:
+      - title: "Bibliotek"
+        url: /redaktoer/bibliotek/
+      - title: "Åbningstider"
+        url: /redaktoer/aabeningstider/
+      - title: "Gruppe (Temasider)"
+        url: /readktoer/grupper/
+      - title: "Sektion"
+        url: /redaktoer/sektion/
+      - title: "Begivenhed (arrangement)"
+        url: /redaktoer/arrangement/
+      - title: "Place2Book"
+        url: /redaktoer/place2book/
+      - title: "Nyhed"
+        url: /redaktoer/nyhed/
+
 sidebar:
   - title: "Funktionalitet"
     url: /posts/
