--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,9 +12,9 @@ redaktoer:
       - title: "Bibliotek"
         url: /redaktoer/bibliotek/
       - title: "Åbningstider"
-        url: /redaktoer/aabeningstider/
+        url: /redaktoer/aabningstider/
       - title: "Gruppe (Temasider)"
-        url: /readktoer/grupper/
+        url: /readktoer/gruppe/
       - title: "Sektion"
         url: /redaktoer/sektion/
       - title: "Begivenhed (arrangement)"
