--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,11 +14,11 @@ redaktoer:
       - title: "Åbningstider"
         url: /redaktoer/aabningstider/
       - title: "Gruppe (Temasider)"
-        url: /readktoer/gruppe/
+        url: /redaktoer/gruppe/
       - title: "Sektion"
         url: /redaktoer/sektion/
       - title: "Begivenhed (arrangement)"
-        url: /redaktoer/arrangement/
+        url: /redaktoer/begivenhed/
       - title: "Place2Book"
         url: /redaktoer/place2book/
       - title: "Nyhed"
@@ -31,6 +31,18 @@ redaktoer:
         url: /redaktoer/secondary-menu/
       - title: "Footermenu"
         url: /redaktoer/footer-menu/
+
+administrator:
+  - title: "Farver og logo"
+    url: /administrator/farver-logo/
+  - title: "Overlay"
+    url: /administrator/overlay/
+  - title: "Opret grupper (Temasider)"
+    url: /administrator/personalisering/
+  - title: "Placering af indhold på forside/sektion"
+    url: /administrator/sektion/
+  - title: "Kontaktinformation"
+    url: /administrator/kontakt/
         
 sidebar:
   - title: "Funktionalitet"
