--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ defaults:
         title: "Vejledninger"
         nav: sidebar
       author_profile: false
-    # _pages
+    # _pages/redaktoer
   - scope:
       path: "_pages/redaktoer"
       type: pages
@@ -96,4 +96,16 @@ defaults:
       sidebar:
         title: "Redaktør manual"
         nav: redaktoer
+      author_profile: false
+      # _pages/administrator
+  - scope:
+      path: "_pages/administrator"
+      type: pages
+    values:
+      layout: single
+      toc: true
+      toc_label: "Indhold på siden"
+      sidebar:
+        title: "Administrator manual"
+        nav: administrator
       author_profile: false
