--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: single
+      layout: splash
       author_profile: false
     # _redaktoer
   - scope:
