Move collections into sider

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+collections_dir: sider
 
 include:
   - _pages
