Set Jekyll base url for previews

--- a/.github/workflows/pr-previews.yml
+++ b/.github/workflows/pr-previews.yml
@@ -16,6 +16,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set Jekyll base url
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: '_config.yml'
+          propertyPath: 'baseurl'
+          value: '/folkebibliotekernes_cms_manual/pr-preview/pr-${{ github.event.number }}'
+          commitChange: false
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build
