--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,11 +2,7 @@ name: Deploy Jekyll site to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+    branches: ["*"]
 
 jobs:
   build:
@@ -14,6 +10,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set GitHub Pages directory
+        id: github-pages
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "::set-output name=directory::main"
+          else
+            echo "::set-output name=directory::pr-preview/pr-${{ github.ref }}"
+          fi
+      - name: Set Jekyll base url
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: '_config.yml'
+          propertyPath: 'baseurl'
+          value: '/folkebibliotekernes_cms_manual/${{ steps.github-pages.outputs.directory }}'
+          commitChange: false
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
@@ -27,5 +38,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./build
-          destination_dir: 'main'
+          destination_dir: ${{ steps.github-pages.outputs.directory }}
           enable_jekyll: false
