--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,12 +4,18 @@ on:
   push:
     branches: ["*"]
 
+env:
+  REPO_NAME: 'folkebibliotekernes_cms_manual'
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Get branch names
+        id: branch-name
+        uses: tj-actions/branch-names@v7
       - name: Set GitHub Pages directory
         id: github-pages
         run: |
@@ -17,8 +23,8 @@ jobs:
             echo "::set-output name=directory::main"
             echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/folkebibliotekernes_cms_manual/main"
           else
-            echo "::set-output name=directory::pr-preview/pr-${{ github.ref }}"
-            echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/folkebibliotekernes_cms_manual/pr-preview/pr-${{ github.ref }}"
+            echo "::set-output name=directory::preview/${{ steps.branch-name.outputs.current_branch }}"
+            echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/folkebibliotekernes_cms_manual/preview/${{ steps.branch-name.outputs.current_branch }}"
           fi
       - name: Set Jekyll base url
         uses: fjogeleit/yaml-update-action@main
@@ -40,7 +46,7 @@ jobs:
         with:
           step: start
           token: ${{ secrets.GITHUB_TOKEN }}
-          env: ${{ github.ref }}
+          env: ${{ steps.branch-name.outputs.current_branch }}
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
