--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: ["*"]
 
+env:
+  REPO_NAME: 'folkebibliotekernes_cms_manual'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,7 +23,7 @@ jobs:
             echo "::set-output name=directory::main"
             echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/folkebibliotekernes_cms_manual/main"
           else
-            echo "::set-output name=directory::pr-preview/pr-${{ github.ref }}"
+            echo "::set-output name=directory::preview/${{ steps.branch-name.outputs.current_branch }}"
             echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/folkebibliotekernes_cms_manual/preview/${{ steps.branch-name.outputs.current_branch }}"
           fi
       - name: Set Jekyll base url
