--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,6 +3,8 @@ name: Deploy Jekyll site to GitHub Pages
 on:
   push:
     branches: ["*"]
+  delete:
+    branches: ["*"]
 
 env:
   BUILD_DIR: "./build"
@@ -11,6 +13,7 @@ env:
 
 jobs:
   build:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -67,3 +70,23 @@ jobs:
           env: ${{ steps.deployment.outputs.env }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
           env_url: ${{ steps.github-pages.outputs.url }}
+
+  delete:
+    if: github.event_name == 'delete'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Get branch names
+        id: branch-name
+        uses: tj-actions/branch-names@v7
+      - name: Delete preview
+        run: |
+          git rm -r ${{ env.PREVIEW_SUBDIR }}/${{ steps.branch-name.outputs.current_branch }}
+          git commit -m "Delete preview for ${{ steps.branch-name.outputs.current_branch }}"
+      - name: Close environment
+        uses: bobheadxi/deployments@v1
+        with:
+          step: deactivate-env
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: ${{ steps.branch-name.outputs.current_branch }}
