--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,6 +7,7 @@ on:
     branches: ["*"]
 
 env:
+  GITHUB_PAGES_BRANCH: "gh-pages"
   BUILD_DIR: "./build"
   REPO_NAME: 'folkebibliotekernes_cms_manual'
   PREVIEW_SUBDIR: 'preview'
@@ -56,7 +57,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
+          publish_branch: ${{ env.GITHUB_PAGES_BRANCH }}
           publish_dir: ${{ env.BUILD_DIR }}
           destination_dir: ${{ steps.github-pages.outputs.directory }}
           enable_jekyll: false
@@ -77,16 +78,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Get branch names
-        id: branch-name
-        uses: tj-actions/branch-names@v7
+        with:
+          ref: ${{ env.GITHUB_PAGES_BRANCH }}
+      # We cannot use tj-actions/branch-names to get the name of the deleted
+      # branch as it will already be deleted when this runs.
       - name: Delete preview
         run: |
-          git rm -r ${{ env.PREVIEW_SUBDIR }}/${{ steps.branch-name.outputs.current_branch }}
-          git commit -m "Delete preview for ${{ steps.branch-name.outputs.current_branch }}"
+          git rm -r ${{ env.PREVIEW_SUBDIR }}/${{ github.event.ref }}
+          git commit -m "Delete preview for ${{ github.event.ref }}"
       - name: Close environment
         uses: bobheadxi/deployments@v1
         with:
           step: deactivate-env
           token: ${{ secrets.GITHUB_TOKEN }}
-          env: ${{ steps.branch-name.outputs.current_branch }}
+          env: ${{ github.event.ref }}
