--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Jekyll site to GitHub Pages
+name: GitHub Pages
 
 on:
   push:
@@ -15,6 +15,7 @@ env:
 
 jobs:
   build:
+    name: "Build and deploy Jekyll site"
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
@@ -49,6 +50,9 @@ jobs:
             echo "::set-output name=directory::preview/${{ steps.branch-name.outputs.current_branch }}"
             echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/${{ env.REPO_NAME }}/${{ env.PREVIEW_SUBDIR }}/${{ steps.branch-name.outputs.current_branch }}"
           fi
+      - name: Configure GitHub Pages
+        id: pages
+        uses: actions/configure-pages@v3
       - name: Set Jekyll base url
         uses: fjogeleit/yaml-update-action@main
         with:
@@ -56,10 +60,7 @@ jobs:
           propertyPath: 'baseurl'
           value: '/${{ env.REPO_NAME }}/${{ steps.github-pages.outputs.directory }}'
           commitChange: false
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3
-      - name: Build
+      - name: Build Jekyll site
         uses: actions/jekyll-build-pages@v1
         with:
           destination: ${{ env.BUILD_DIR }}
@@ -70,7 +71,7 @@ jobs:
           step: start
           token: ${{ secrets.GITHUB_TOKEN }}
           env: ${{ steps.branch-name.outputs.current_branch }}
-      - name: Deploy
+      - name: Deploy Jekyll site to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -94,6 +95,7 @@ jobs:
           env_url: ${{ steps.github-pages.outputs.url }}
 
   delete:
+    name: "Cleanup preview"
     if: github.event_name == 'delete'
     runs-on: ubuntu-latest
     steps:
@@ -103,13 +105,13 @@ jobs:
           ref: ${{ env.GITHUB_PAGES_BRANCH }}
       # We cannot use tj-actions/branch-names to get the name of the deleted
       # branch as it will already be deleted when this runs.
-      - name: Delete preview
+      - name: Delete preview site
         run: |
           rm -rf ${{ env.PREVIEW_SUBDIR }}/${{ github.event.ref }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Delete preview for ${{ github.event.ref }}"
-      - name: Close environment
+      - name: Deactivate environment
         uses: bobheadxi/deployments@v1
         with:
           step: deactivate-env
