Reindex site in Algolia when pushing to main
With our updated workflow the page_build action no longer seems to be
triggered. Run on main instead. This is also what is being referred to
in the documentation for the action at 
https://github.com/dieghernan/algolia-jekyll-action

Update to v2 as this is also the version referred there.

--- a/.github/workflows/algolia-search.yml
+++ b/.github/workflows/algolia-search.yml
@@ -1,5 +1,7 @@
 on:
-  page_build:
+  push:
+    branches:
+      - main
 
 name: algolia-search
 jobs:
@@ -21,6 +23,6 @@ jobs:
             ${{ runner.os }}-gems-
             
       - name: Algolia Jekyll Action
-        uses: dieghernan/algolia-jekyll-action@v1
+        uses: dieghernan/algolia-jekyll-action@v2
         with:
           APIKEY: '${{ secrets.ALGOLIA_API_KEY }}'
