Add write permission to GitHub Pages workflow
This could replace the need to add configuration in each repo

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,6 +13,10 @@ env:
   REPO_NAME: 'folkebibliotekernes_cms_manual'
   PREVIEW_SUBDIR: 'preview'
 
+permissions:
+  contents: write
+  deployments: write
+
 jobs:
   build:
     name: "Build and deploy Jekyll site"
